tests/negative/runtime/substr_out_of_bounds/input.ci
void main() {
    print(substr("abc", 2, 5));
}
